# Regress

./: .gitignore  CHANGELOG.md  README.md  f1_data.csv  haskell-linear-regression.cabal  lap_times.csv  linear-regress.cabal
app/: DataLoader.hs  LossFunction.hs  Main.hs  Metrics.hs  Optimizer.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
examples/: AutoExample.hs  Main.hs
src/: Regress.hs
src/Regress/: Core.hs  Data.hs  Metrics.hs
