cabal-version:      3.0

name:               linear-regress
version:            0.0.1
synopsis:           Simple and efficient linear regression library
description:        A clean, lightweight Haskell library for linear regression
                    with gradient descent optimization, comprehensive metrics,
                    and CSV data loading capabilities.

license:            BSD-3-Clause
license-file:       LICENSE
author:             Nathan Ryver
maintainer:         tantaouibahaabusiness@gmail.com
category:           Math, Statistics
build-type:         Simple
extra-doc-files:    CHANGELOG.md, README.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Regress
                    , Regress.Core
                    , Regress.Metrics
                    , Regress.Data
    hs-source-dirs:   src
    build-depends:    base ^>=4.18.3.0,
                      cassava,
                      vector,
                      bytestring
    default-language: Haskell2010

executable linear-regress-example
    import:           warnings
    main-is:          Main.hs
    hs-source-dirs:   examples
    build-depends:    base ^>=4.18.3.0,
                      linear-regress,
                      cassava,
                      vector,
                      bytestring
    default-language: Haskell2010

executable auto-example
    import:           warnings
    main-is:          AutoExample.hs
    hs-source-dirs:   examples
    build-depends:    base ^>=4.18.3.0,
                      linear-regress,
                      cassava,
                      vector,
                      bytestring
    default-language: Haskell2010
